--- a/templates/users/edit_profile.html
+++ b/templates/users/edit_profile.html
@@ -79,6 +79,7 @@
                                         </div>
                                     </div>
                                     <input type="submit" class="btn btn-success" value="Save Changes">
+                                </form>
                             </div>
                         </div>
                     </div>
