--- a/templates/includes/messages/messages_error.html
+++ b/templates/includes/messages/messages_error.html
@@ -1,6 +1,6 @@
 {% load static %}
 
-<div class="toast bg-danger" role="alert" aria-live="assertive" aria-atomic="true" data_delay="8000">
+<div class="toast bg-danger" role="alert" aria-live="assertive" aria-atomic="true" data-delay="5000">
     <div class="toast-header">
         <strong class="mr-auto">Error</strong>
         <small class="text-muted">Now</small>
