--- a/templates/includes/dashboard_list.html
+++ b/templates/includes/dashboard_list.html
@@ -8,6 +8,6 @@
             href="{% url 'edit_profile' %}" aria-label="account settings"> Account Settings </a>
     </ul>
     <br>
-    <a class="btn btn-outline-danger btn-block" href="#" aria-label="Log out"> <i class="fa fa-power-off"></i> <span
+    <a class="btn btn-outline-danger btn-block" href="{% url 'account_logout' %}" aria-label="Log out"> <i class="fa fa-power-off"></i> <span
             class="text">Log out</span> </a>
 </aside>
