--- a/templates/includes/navbar.html
+++ b/templates/includes/navbar.html
@@ -25,7 +25,7 @@
             <div class="row align-items-center">
                 <div class="col-lg-2 col-md-3 col-sm-12">
                     <a href="{% url 'home' %}" class="brand-wrap">
-                        <img class="logo" src="{% static './images/logo-.png' %}" width="150px">
+                        <img class="logo" src="{% static './images/logo.png' %}" width="150px">
                     </a> 
                 </div>
                 <div class="col-md-2 col-sm-6">
