--- a/templates/includes/navbar.html
+++ b/templates/includes/navbar.html
@@ -4,13 +4,13 @@
     <nav class="navbar navbar-expand-lg navbar-light bg-dark border-bottom">
         <div class="container">
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTop"
-                aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                aria-controls="navbarTop" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarTop">
                 <ul class="navbar-nav ml-auto">
                     <li class="nav-item">
-                        <a class="nav-link text-white" href="mailto: info.dripdrop.se@gmail.com.com"><i class="fa fa-envelope"></i> Email Us</a>
+                        <a class="nav-link text-white" href="mailto: info.dripdrop.se@gmail.com"><i class="fa fa-envelope"></i> Email Us</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link text-white" href="tel:+46729162986"><i class="fa fa-phone"></i> Call Us</a>
@@ -25,7 +25,7 @@
             <div class="row align-items-center">
                 <div class="col-lg-2 col-md-3 col-sm-12">
                     <a href="{% url 'home' %}" class="brand-wrap">
-                        <img class="logo" src="{% static './images/logo.png' %}" width="150px">
+                        <img class="logo" src="{% static './images/logo.png' %}" width="150" alt="Logo">
                     </a> 
                 </div>
                 <div class="col-md-2 col-sm-6">
