--- a/templates/home.html
+++ b/templates/home.html
@@ -6,15 +6,15 @@
 {% block content %}
 
 <!-- Main Section -->
-<section class="main-section padding-y-sm">
+<div class="main-section padding-y-sm">
     <div class="container mb-5">
         <div class="main-banner-wrap">
             <img src="{% static './images/banners/2.png' %}" alt="banner" class="img-fluid rounded">
         </div>
     </div>
-</section>
+</div>
 <!-- Product Section -->
-<section class="section-name padding-y-sm bg">
+<div class="section-name padding-y-sm bg">
     <div class="container mb-5">
 
         <header class="section-heading">
@@ -39,7 +39,7 @@
         </div>
 
     </div>
-</section>
+</div>
 
 
 
