--- a/templates/includes/navbar.html
+++ b/templates/includes/navbar.html
@@ -10,7 +10,7 @@
             <div class="collapse navbar-collapse" id="navbarTop">
                 <ul class="navbar-nav ml-auto">
                     <li class="nav-item">
-                        <a class="nav-link text-white" href="mailto: info.dripdrop.se@gmail.com"><i class="fa fa-envelope"></i> Email Us</a>
+                        <a class="nav-link text-white" href="mailto:info.dripdrop.se@gmail.com"><i class="fa fa-envelope"></i> Email Us</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link text-white" href="tel:+46729162986"><i class="fa fa-phone"></i> Call Us</a>
@@ -20,7 +20,7 @@
         </div>
     </nav>
     <!-- Main Header -->
-    <section class="main-header">
+    <section class="main-header" aria-label="Main Navigation">
         <div class="container">
             <div class="row align-items-center">
                 <div class="col-lg-2 col-md-3 col-sm-12">
