--- a/templates/base.html
+++ b/templates/base.html
@@ -64,7 +64,7 @@
 {% block extra_js %}
 {% endblock %}
 
-<script type="text/javascript">
+<script>
     $(document).ready(function() {
         $('.toast').toast('show');
         
