--- a/templates/includes/footer.html
+++ b/templates/includes/footer.html
@@ -1,7 +1,7 @@
 {% load static %}
 <footer class="section-footer border-top bg-light padding-y mt-auto">
     <div class="container">
-        <section class="footer-bottom border-top row align-items-center">
+        <section class="footer-bottom border-top row align-items-center" aria-label="Footer section">
             <div class="col-md-4">
                 <p class="text-muted">&copy; 2024 DRIPDROP</p>
             </div>
